done api active user

--- a/src/languages/en/user.json
+++ b/src/languages/en/user.json
@@ -33,6 +33,7 @@
         "inactive": "User is inactive",
         "isActiveInvalid": "User is active invalid",
         "usernameExist": "Username exist",
-        "newPasswordMustDifference": "Old password must difference"
+        "newPasswordMustDifference": "Old password must difference",
+        "activeKeyInvalid": "User active key invalid!"
     }
 }
